; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/pseries/extr_lpar.c_pSeries_lpar_hpte_removebolted.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/pseries/extr_lpar.c_pSeries_lpar_hpte_removebolted.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i32, i32)* @pSeries_lpar_hpte_removebolted to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pSeries_lpar_hpte_removebolted(i64 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %10 = load i64, i64* %4, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i64 @get_kernel_vsid(i64 %10, i32 %11)
  store i64 %12, i64* %8, align 8
  %13 = load i64, i64* %4, align 8
  %14 = load i64, i64* %8, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i64 @hpt_va(i64 %13, i64 %14, i32 %15)
  store i64 %16, i64* %9, align 8
  %17 = load i64, i64* %9, align 8
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* %6, align 4
  %20 = call i64 @pSeries_lpar_hpte_find(i64 %17, i32 %18, i32 %19)
  store i64 %20, i64* %7, align 8
  %21 = load i64, i64* %7, align 8
  %22 = icmp eq i64 %21, -1
  %23 = zext i1 %22 to i32
  %24 = call i32 @BUG_ON(i32 %23)
  %25 = load i64, i64* %7, align 8
  %26 = load i64, i64* %9, align 8
  %27 = load i32, i32* %5, align 4
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @pSeries_lpar_hpte_invalidate(i64 %25, i64 %26, i32 %27, i32 %28, i32 0)
  ret void
}

declare dso_local i64 @get_kernel_vsid(i64, i32) #1

declare dso_local i64 @hpt_va(i64, i64, i32) #1

declare dso_local i64 @pSeries_lpar_hpte_find(i64, i32, i32) #1

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @pSeries_lpar_hpte_invalidate(i64, i64, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
